# inkless

./: Cargo.toml
inkless/: Cargo.toml
inkless-core/: Cargo.toml
inkless-core/src/: lib.rs  renderable.rs
inkless-core/src/buffer/: mod.rs
inkless-core/src/buffer/static/: mod.rs
inkless-core/src/builtins/: mod.rs
inkless-core/src/builtins/sinks/: plaintext.rs
inkless-core/src/canvas/: buffer.rs  ext.rs  into.rs  mod.rs  summary.rs
inkless-core/src/grapheme/: char.rs  grapheme.rs  mod.rs  static.rs
inkless-core/src/render_position/: mod.rs
inkless-core/src/tag/: colors.rs  mod.rs  sink.rs  untagged.rs
inkless-core/src/theme/: canvas.rs  clean.rs  ext.rs  mod.rs
inkless-core/src/writer/: character.rs
inkless-macros/: Cargo.toml
inkless-macros/src/: lib.rs
inkless-term/: Cargo.toml
inkless-term/src/: delta.rs  lib.rs  sink.rs  std.rs  styles.rs  support.rs  tag.rs  utils.rs
inkless-term/src/tag/: default.rs  indirection.rs  mod.rs
inkless-widgets/: Cargo.toml
inkless-widgets/src/: lib.rs
inkless-widgets/src/number/: graphemes.rs  mod.rs  separator.rs  tag.rs
inkless-widgets/src/plural_text/: mod.rs
inkless-widgets/src/text/: mod.rs  overflow.rs
inkless-widgets/src/text/renderable/: clip.rs  grapheme_wrap.rs  mod.rs  word_wrap.rs
inkless-widgets/src/text/renderable/ellipsis/: center.rs  left.rs  mod.rs  right.rs
inkless-widgets/src/text/segment/: mod.rs  recursive.rs
inkless-widgets/src/text/tag/: mod.rs
inkless/examples/: number.rs  text_overflow.rs
inkless/src/: lib.rs
