[package]
name = "inkless"
version = "0.1.0"
edition = "2024"

[dependencies]
inkless-core = { version = "0.1", path = "../inkless-core", default-features = false }
inkless-macros = { version = "0.1", path = "../inkless-macros" }
inkless-widgets = { version = "0.1", path = "../inkless-widgets" }
inkless-term = { version = "0.1", path = "../inkless-term" }

[features]
default = ["std"]
std = ["alloc", "inkless-core/std", "inkless-term/std"]
alloc = ["inkless-core/alloc"]
