[package]
name = "inkless"
version = "0.1.0"
edition = "2024"

[dependencies]
inkless-core = { version = "0.1", path = "../inkless-core", default-features = false }
inkless-macros = { version = "0.1", path = "../inkless-macros" }
inkless-widgets = { version = "0.1", path = "../inkless-widgets", default-features = false }
inkless-term = { version = "0.1", path = "../inkless-term", default-features = false }

[features]
default = ["std"]
std = ["alloc", "inkless-core/std", "inkless-term/std", "inkless-widgets/std"]
alloc = ["inkless-core/alloc", "inkless-term/alloc", "inkless-widgets/alloc"]
